Logre hacer que menu funcionara
Tuve que cambiar a php para que se hiciera la relación, almenos con home.

Parece que por x o y razon algo el js de home dejo de funcionar y los iconos que yo agregue no aparecen....Puede que sea por la hora, mañana lo reviso

--- a/css/footer.css
+++ b/css/footer.css
@@ -17,7 +17,7 @@ footer {
 .footer-logo img {
     display: block;
     margin: 0 auto 20px; /* Centrado y con espacio hacia abajo */
-    width: 120px; /* Ajustar según el tamaño deseado */
+    width: 25%; /* Ajustar según el tamaño deseado */
 }
 
 .footer-container {
