--- a/css/noso.css
+++ b/css/noso.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,7 +8,7 @@ html, body{
     height: 100%;
     font-family: "Red Hat Display", sans-serif; 
 
-}
+} */
 
 /*
 header{
@@ -17,15 +17,15 @@ header{
     text-align: center;
 }
 */
-main {
+/* main {
     padding: 20px;
-}
+} */
 
 .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     opacity: 0;
     animation: fadeIn 1s forwards;
 }
