--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@ body, html {
     padding: 0;
     font-family: Arial, sans-serif;
     color: white;
-    background-color: #000;
+    /* background-color: #000; */
     overflow-x: hidden;
     height: 100%; /* Asegura que el body tenga la altura mínima del viewport */
     position: relative; /* Importante para que el footer se posicione correctamente */
