--- a/css/noso.css
+++ b/css/noso.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,8 +8,11 @@ html, body{
     height: 100%;
     font-family: "Red Hat Display", sans-serif; 
 
-} */
+}
 
+p{
+    color: #333;
+}
 /*
 header{
     background-color: #D0B7E1;
