--- a/css/home.css
+++ b/css/home.css
@@ -33,8 +33,7 @@ body, html {
     overflow-x: hidden;
     height: 100%; /* Asegura que el body tenga la altura mínima del viewport */
     position: relative; /* Importante para que el footer se posicione correctamente */
-}
-
+}*/
 
 
 .menu-container {
