--- a/css/menu.css
+++ b/css/menu.css
@@ -65,7 +65,7 @@ a {
 
 /* ============HEADER============ */
 .header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
