Ya quedo la pagina principal

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,7 @@ footer {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    z-index:100 ;
 }
 
 /*:::::Pie de Pagina*/
