--- a/css/noso.css
+++ b/css/noso.css
@@ -74,6 +74,96 @@ p{
 }
 
 
+#Titulo-Circular{
+    height: 500px;
+    background-color: white;
+    font-family: 'Red Hat Display', sans-serif; /* Fallback a una fuente sans-serif por si la fuente no se carga correctamente */
+    height: 50vh;
+}
+
+#Titulo-Circular .contenedor-TC{
+    text-align: center; /* Para centrar el contenido */
+    height: 50vh;
+}
+
+.medio-circulo {
+    width: 100%; /* Ancho del círculo */
+    height: 100vh; /* Altura del círculo */
+    background-color: #f0f0f0; /* Color de fondo del círculo */
+    border-radius: 0 0 3000px 3000px; /* Hacemos que la esquina inferior izquierda y derecha sean redondeadas para crear un círculo perfecto */
+    position: relative; /* Permitirá posicionar la imagen dentro del círculo */
+    margin: -300px auto 0;
+    overflow: hidden; /* Para ocultar partes de la imagen que sobrepasen el círculo */
+    z-index: 1;
+  }
+
+  
+  
+  .medio-circulo img {
+    width: 100%; /* La imagen ocupará todo el ancho del círculo */
+    height: auto; /* La altura se ajustará automáticamente para mantener la proporción */
+    display: block; /* Para eliminar cualquier espacio adicional alrededor de la imagen */
+    position: absolute; /* Posiciona la imagen relativa al contenedor */
+    bottom: 0; /* Alinea la imagen en la parte inferior del círculo */
+    left: 50%; /* Coloca la imagen en el centro horizontalmente */
+    transform: translateX(-50%); /* Ajusta la posición de la imagen horizontalmente */
+    object-fit: cover; /* Ajusta la imagen dentro del contenedor sin distorsionarla */
+    opacity: 0; /* Configura la opacidad inicial en 0 (completamente transparente) */
+    animation: aparecer 1s ease forwards; /* Define la animación 'aparecer' con una duración de 1 segundo */
+    z-index: 1;
+    /*filter: blur(6px);  Aplica un desenfoque de 5px a la imagen de fondo */
+  }
+  
+  @keyframes aparecer {
+    from {
+      opacity: 0; /* Comienza con una opacidad de 0 */
+    }
+    to {
+      opacity: 1; /* Termina con una opacidad de 1 */
+    }
+  }
+  
+  .medio-circulo h1 {
+    color: white;
+    font-size: 100px;
+    position: relative;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 900;
+  }
+  
+  .medio-circulo h1::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -30px; /* Coloca la barra 10 píxeles debajo del texto */
+    width: 40%; /* largo de la barra */
+    height: 10%; /* Grosor de la barra */
+    background: linear-gradient(to right, #ff9900, #ff6600);
+    transform: translateX(-50%); /* Centra la barra horizontalmente */
+    
+  }
+  
+  
+
+  .medio-circulo p {
+    color: white;
+  font-size: 20px;
+  position: relative;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2; /* Asegura que el texto esté por encima de la imagen */
+  color: white;
+  font-family: 'Red Hat Display', sans-serif; /* Fallback a una fuente sans-serif por si la fuente no se carga correctamente */
+  font-weight: normal;
+  }
+
 .text{
     text-align: justify;
 }
