--- a/css/menu_comida.css
+++ b/css/menu_comida.css
@@ -1,18 +1,28 @@
-/* Estilos para las tarjetas */
+body {
+    background-color: white;
+}
+
+.tarjetas-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
 .tarjeta {
-   background-color: white;
+    background: white;
     border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    width: 300px;
-    float: left;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    padding: 20px;
+    margin: 20px;
+    width: 350px;
+    transition: box-shadow 0.3s ease-in-out, background 0.3s ease-in-out;
+    text-align: center;
+    align-items: center;
 }
 
 .tarjeta:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(rgba(0,0,0,1));
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
+    background: linear-gradient(rgba(255, 255, 255, 1), rgb(255, 239, 225));
 }
 
 .tarjeta img {
@@ -31,4 +41,8 @@
     font-size: 14px;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.pie-pagina {
+    bottom: 0;
 }
