--- a/login.css
+++ b/login.css
@@ -1,8 +1,21 @@
+ @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
+@font-face {
+    font-family: 'Red Hat Display';
+    font-style: normal;
+    font-weight: 400;
+    /* Peso de la fuente normal */
+    src: url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap') format('woff2'),
+        /* Cambia la ruta a la ubicación real de tu archivo de fuente */
+        url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap') format('woff');
+    /* Cambia la ruta a la ubicación real de tu archivo de fuente */
+}
+
 body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: 'Red Hat Display', sans-serif
 }
 
 .background {
@@ -18,6 +31,8 @@ body, html {
 .login-container {
     background: rgba(255, 255, 255, 0.95);
     width: 350px;
+    height: 70%;
+
     padding: 20px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
     border-radius: 10px;
